Modificación desde Dreamweaver

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
   <h1>¡Buenos días!</h1>
   <h2>IDAT - Juan Carlos Camayo</h2>
+  <h3>Dreamweaver</h3>	
   <img src="img/foto.jpg" alt="Florencia" />
 </body>
 </html>
