--- a/index.html
+++ b/index.html
@@ -8,5 +8,22 @@
   <h2>IDAT - Juan Carlos Camayo</h2>
   <h3>Dreamweaver</h3>	
   <img src="img/foto.jpg" alt="Florencia" />
+
+  <table cellpadding="1" cellspacing="1" width="50%">
+	<tr>
+		<th> Alumno </th>  
+		<th> Url Publica </th>
+		<th> Url Local </th>
+		<th> Url Tarea </th>
+	</tr>
+	<tr>
+		<td> Juan Carlos Camayo </td>  
+		<td> <a href="https://jucamayo.github.io/DWS08_2020_01/index.html">Ver</a> </td>
+		<td> <a href="index.html">Ver</a>  </td>
+		<td> <a href="https://jucamayo.github.io/DWS08_2020_01/index.html">Ver</a>  </td>
+	</tr> 
+	  
+  </table>
+ 
 </body>
 </html>
