border en tabla

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h3>Dreamweaver</h3>	
   <img src="img/foto.jpg" alt="Florencia" />
 
-  <table cellpadding="1" cellspacing="1" width="50%">
+  <table cellpadding="1" cellspacing="1" width="50%" border="1">
 	<tr>
 		<th> Alumno </th>  
 		<th> Url Publica </th>
