--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@
 	<tr>
 		<th> Alumno </th>  
 		<th> Url Publica </th>
-		<th> Url Local </th>
 		<th> Url Tarea </th>
 	</tr>
 	<tr>
 		<td> Juan Carlos Camayo </td>  
 		<td> <a href="https://jucamayo.github.io/DWS08_2020_01/index.html">Ver</a> </td>
-		<td> <a href="index.html">Ver</a>  </td>
-		<td> <a href="https://jucamayo.github.io/DWS08_2020_01/index.html">Ver</a>  </td>
+		<td> <a href="https://jucamayo.github.io/DWS08_2020_01/tarea.html">Ver</a>  </td>
 	</tr> 
 	  
   </table>
