Trabajo Final Avance

--- a/tarea.html
+++ b/tarea.html
@@ -2,19 +2,19 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Trabajo Final</title>
 </head>
 <body>
-	<header style="background-color:black; color: white;">
+	<header>
 		<center>
-			<h1>Mi titulo</h1>
+			<h1>Trabajo Final Dreamweaver</h1>
 		</center>
 	</header>
-	<nav style="background-color:#DADADA;">
+	<nav>
 		<a href="page01.html">IR SECCION 2</a>
 		<a href="page02.html">IR SECCION 3</a>
 	</nav>
-	<section style="background-color:#78BD8E; float: left; width: 70%;">
+	<section class="portada">
 		<h2>Contenido Principal</h2>
 		<article style="background-color:#FEDFB2; color: white">
 			<br>
