Entrega de trabajo de Pedro Caballero

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 		<td> <a href="https://jucamayo.github.io/DWS08_2020_01/index.html">Ver</a> </td>
 		<td> <a href="https://jucamayo.github.io/DWS08_2020_01/tarea.html">Ver</a>  </td>
 	</tr> 
+	<tr>
+		<td> Pedro Caballero </td>  
+		<td> <a href="https://a2kpit.github.io/DWS08_2020_01/index.html">Ver</a> </td>
+		<td> <a href="https://a2kpit.github.io/DWFINAL/index.html">Ver</a>  </td>
+	</tr> 
 	  
   </table>
  
